# NordlayerKde

./: CLAUDE.md  Cargo.toml  README.md  SECURITY.md  deny.toml
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: release.yml  security.yml
packaging/: nordlayer-kde.desktop
src/: cli.rs  lib.rs  main.rs  parser.rs  tray.rs
tests/: parser.rs
